--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oliver Geißendörfer - Scientist</title>
+    <title>Oliver Geißendörfer - personal webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@
 </head>
 <body>
     <header>
-        <img src="your-image.jpg" alt="Your Name">
+        <img src="your-image.jpg" alt="Oliver Geißendörfer">
         <h1>Your Name</h1>
         <p>Engineering Researcher | Innovator | Collaborator</p>
     </header>
@@ -76,9 +76,9 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Welcome to my digital space! I am a Scientific Employee at [Your University], 
-            specializing in [your area of expertise]. My work focuses on bridging the gap 
-            between academic research and industry applications. With a commitment to driving 
+            Welcome to my digital space! I am a Scientific Employee at Technical University of Munich, 
+            specializing in Point Cloud processing. My work focuses on bridging the gap 
+            between academic research, environmental monitoring and industrial applications. With a commitment to driving 
             innovation, I am eager to collaborate with like-minded individuals and companies 
             to make a meaningful impact.
         </p>
@@ -87,26 +87,28 @@
             dive into my interactive publication timeline.
         </p>
     </section>
+	<!--
     <section id="projects">
         <h2>Research Projects</h2>
         <p>Here are some of the exciting research projects I've worked on:</p>
         <ul>
-            <li>Project 1: [Brief description of the project]</li>
-            <li>Project 2: [Brief description of the project]</li>
-            <li>Project 3: [Brief description of the project]</li>
+            <li>Project 1: PROVILAS</li>
+            <li>Project 2: </li>
+            <li>Project 3: Hensoldt</li>
         </ul>
     </section>
+	//-->
     <section id="publications">
         <h2>Publications</h2>
         <div id="timeline-embed"></div>
     </section>
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: oliver.geissendoerfer@gmail.com</p>
-        <p>LinkedIn: https://www.linkedin.com/in/oliver-geißendörfer</p>
+        <p><a href="oliver.geissendoerfer@gmail.com">Email</a></p>
+        <p><a href="https://www.linkedin.com/in/oliver-geißendörfer">LinkedIn</a></p>
     </section>
     <footer>
-        <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2024 Oliver Geißendörfer. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
