--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </head>
 <body>
     <header>
-        <img src="your-image.jpg" alt="Oliver Geißendörfer">
-        <h1>Your Name</h1>
+        <img src="Homepage_01.jpg" alt="Oliver Geißendörfer">
+        <h1>Oliver Geißendörfer</h1>
         <p>Engineering Researcher | Innovator | Collaborator</p>
     </header>
     <nav>
