--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
     <nav>
         <a href="#about">About</a>
-        <a href="#projects">Research Projects</a>
+        <!--<a href="#projects">Research Projects</a>-->
         <a href="#publications">Publications</a>
         <a href="#contact">Contact</a>
     </nav>
