--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>About Me</h2>
         <p>
             Welcome to my digital space! I am a Scientific Employee at Technical University of Munich, 
-            specializing in Point Cloud processing. My work focuses on bridging the gap 
+            specializing in Point Cloud processing, segmentation and visualization. My work focuses on bridging the gap 
             between academic research, environmental monitoring and industrial applications. With a commitment to driving 
             innovation, I am eager to collaborate with like-minded individuals and companies 
             to make a meaningful impact.
@@ -124,28 +124,28 @@
             events: [
                 {
                     start_date: {
-                        year: "2020"
-                    },
-                    text: {
-                        headline: "Publication 1",
-                        text: "Details about your first publication. <a href='https://example.com'>Read more</a>."
-                    }
-                },
-                {
-                    start_date: {
-                        year: "2021"
-                    },
-                    text: {
-                        headline: "Publication 2",
-                        text: "Details about your second publication. <a href='https://example.com'>Read more</a>."
-                    }
-                },
-                {
-                    start_date: {
                         year: "2023"
                     },
                     text: {
-                        headline: "Publication 3",
+                        headline: "Efficient In-Memory Point Cloud Query Processing",
+                        text: "Details about your first publication. <a href='https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16'>Read more</a>."
+                    }
+                },
+                {
+                    start_date: {
+                        year: "2024"
+                    },
+                    text: {
+                        headline: "Combining LiDAR and Time Domain Frequency Analysis for Enhanced Spatial Understanding of Vibration Responses",
+                        text: "Details about your second publication. <a href='https://ieeexplore.ieee.org/abstract/document/10648750'>Read more</a>."
+                    }
+                },
+                {
+                    start_date: {
+                        year: "2025"
+                    },
+                    text: {
+                        headline: "3D Point Cloud frequencies",
                         text: "Details about your third publication. <a href='https://example.com'>Read more</a>."
                     }
                 }
