--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         <p>Here are some of the exciting research projects I've worked on:</p>
         <ul>
             <li>Project 1: PROVILAS</li>
-            <li>Project 2: </li>
+            <li>Project 2: Sustainability day</li>
+			<li>Project 3: Intuitive neighborhood search</li>
             <li>Project 3: Hensoldt</li>
         </ul>
     </section>
@@ -105,7 +106,7 @@
     </section>
     <section id="contact">
         <h2>Contact Me</h2>
-        <p><a href="oliver.geissendoerfer@gmail.com">Email</a></p>
+        <p><a href="mailto: oliver.geissendoerfer@gmail.com">Email</a></p>
 		<p><a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de">Google Scholar</a></p>
         <p><a href="https://www.linkedin.com/in/oliver-geißendörfer">LinkedIn</a></p>
     </section>
