--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             innovation, I am eager to collaborate with like-minded individuals and companies 
             to make a meaningful impact.
         </p>
+		<p><a href="mailto: oliver.geissendoerfer@gmail.com">Email</a></p>
+		<p><a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a></p>
+        <p><a href="https://www.linkedin.com/in/oliver-geißendörfer"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a></p></a></p>
         <!--<p>
             Feel free to browse through my CV highlights, explore my research projects, and 
             dive into my interactive publication timeline.
@@ -104,12 +107,12 @@
         <h2>Publications</h2>
         <div id="timeline-embed"></div>
     </section>
-    <section id="contact">
+    <!--<section id="contact">
         <h2>Contact Me</h2>
         <p><a href="mailto: oliver.geissendoerfer@gmail.com">Email</a></p>
 		<p><a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de">Google Scholar</a></p>
         <p><a href="https://www.linkedin.com/in/oliver-geißendörfer">LinkedIn</a></p>
-    </section>
+    </section>-->
     <footer>
         <p>&copy; 2024 Oliver Geißendörfer. All Rights Reserved.</p>
     </footer>
@@ -126,6 +129,11 @@
                     text: {
                         headline: "Efficient In-Memory Point Cloud Query Processing",
                         text: "Details about your first publication. <a href='https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16'>Read more</a>."
+                    },
+					media: {
+                        url: "https://via.placeholder.com/800x400",
+                        caption: "An image representing this publication",
+                        credit: "Image by Author"
                     }
                 },
                 {
