--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             innovation, I am eager to collaborate with like-minded individuals and companies 
             to make a meaningful impact.
         </p>
-		<p><a href="mailto: oliver.geissendoerfer@gmail.com">Email</a></p>
+		<p><a href="mailto: oliver.geissendoerfer@gmail.com"><img src="https://www.svgrepo.com/show/14478/email.svg" alt="Email svg" style="width: 24px; height: 24px; vertical-align: middle;"></a></p>
 		<p><a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a></p>
         <p><a href="https://www.linkedin.com/in/oliver-geißendörfer"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a></p></a></p>
         <!--<p>
@@ -129,11 +129,6 @@
                     text: {
                         headline: "Efficient In-Memory Point Cloud Query Processing",
                         text: "Details about your first publication. <a href='https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16'>Read more</a>."
-                    },
-					media: {
-                        url: "https://via.placeholder.com/800x400",
-                        caption: "An image representing this publication",
-                        credit: "Image by Author"
                     }
                 },
                 {
@@ -143,6 +138,11 @@
                     text: {
                         headline: "Combining LiDAR and Time Domain Frequency Analysis for Enhanced Spatial Understanding of Vibration Responses",
                         text: "Details about your second publication. <a href='https://ieeexplore.ieee.org/abstract/document/10648750'>Read more</a>."
+                    },
+					media: {
+                        url: "IEEE2024.png",
+                        caption: "Moving object monitored with profile laser scanning.",
+                        credit: "Oliver Geißendörfer"
                     }
                 },
                 {
