--- a/index.html
+++ b/index.html
@@ -55,6 +55,42 @@
             background-color: #004466;
             color: white;
         }
+		.contact-links {
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			margin-top: 20px;
+		}
+
+		.contact-item {
+			text-align: center;
+			text-decoration: none;
+			color: #004466;
+			font-size: 1rem;
+		}
+
+		.contact-logo {
+			width: 50px;
+			height: 50px;
+			margin-bottom: 5px;
+			display: block;
+		}
+		
+		@media (max-width: 600px) {
+			.contact-links {
+				flex-direction: column;
+				align-items: flex-start;
+			}
+		}
+
+		#about {
+			max-width: 900px;
+			margin: 20px auto;
+			padding: 20px;
+			background: white;
+			box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+		}
+
         #timeline-embed {
             width: 100%;
             height: 500px;
@@ -128,7 +164,7 @@
                     },
                     text: {
                         headline: "Efficient In-Memory Point Cloud Query Processing",
-                        text: "Details about your first publication. <a href='https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16'>Read more</a>."
+                        text: "Computing geometric features of Point Clouds highly efficiently. <a href='https://link.springer.com/chapter/10.1007/978-3-031-43699-4_16'>Read more</a>."
                     }
                 },
                 {
