--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         <h1>Oliver Geißendörfer</h1>
         <p>Engineering Researcher | Innovator | Collaborator</p>
     </header>
-    <nav>
+    <!--<nav>
         <a href="#about">About</a>
-        <!--<a href="#projects">Research Projects</a>-->
+        <!{1}**<a href="#projects">Research Projects</a>**{1}>
         <a href="#publications">My Publications</a>
-        <a href="#contact">Contact</a>
-    </nav>
+        <!{1}**<a href="#contact">Contact</a>**{1}>
+    </nav>-->
     <section id="about">
         <h2>About Me</h2>
         <p>
@@ -161,6 +161,7 @@
                 {
                     start_date: {
                         year: "2023"
+						month: "Feb"
                     },
                     text: {
                         headline: "Efficient In-Memory Point Cloud Query Processing",
