--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<p>
 					Welcome to my digital space! I am a Scientific Employee at Technical University of Munich, 
 					specializing in Point Cloud processing, segmentation and visualization. My work focuses on bridging the gap 
-					between academic research, environmental monitoring and industrial applications. With a commitment to driving 
+					between academic research and environmental as well as industrial applications. With a commitment to driving 
 					innovation, I am eager to collaborate with like-minded individuals and companies 
 					to make a meaningful impact.
 				</p>
