index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <header>
         <img src="OG.svg" alt="Oliver Geißendörfer">
         <h1>Oliver Geißendörfer</h1>
-        <p>Engineering Researcher | Innovator | Collaborator</p>
+        <p>Engineer | Researcher | Innovator | Collaborator</p>
     </header>
     <!--<nav>
         <a href="#about">About</a>
