--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         };
 		// Sort the events by date (newest first)
 		timelineData.events.sort((a, b) => {
-			const dateA = new Date(a.start_date.year, a.start_date.month - 1); // Month is 0-based
-			const dateB = new Date(b.start_date.year, b.start_date.month - 1);
+			const dateA = new Date(a.start_date.year, a.start_date.month - 1 || 0); // Month is 0-based
+			const dateB = new Date(b.start_date.year, b.start_date.month - 1 || 0);
 			return dateB - dateA; // Descending order
 		});
 	
