--- a/index.html
+++ b/index.html
@@ -272,27 +272,26 @@
             ]
         };
 		
-		function renderTimeline() {
-		  const timelineContainer = document.getElementById("timeline-container");
-
-		  // Sort publications from newest to oldest
-		  publications.sort((a, b) => b.year - a.year);
-
-		  // Add publications to the timeline
-		  publications.forEach(pub => {
-			const timelineItem = document.createElement("div");
-			timelineItem.classList.add("timeline-item");
-
-			timelineItem.innerHTML = `
-			  <h3>${pub.year}</h3>
-			  <p><strong>${pub.title}</strong></p>
-			  <p>${pub.description}</p>
-			`;
-
-			timelineContainer.appendChild(timelineItem);
-		  });
-		}
-		renderTimeline();
+		// Sort the events by date (newest first)
+		timelineData.events.sort((a, b) => {
+			const dateA = new Date(a.start_date.year, a.start_date.month - 1 || 0); // Month is 0-based
+			const dateB = new Date(b.start_date.year, b.start_date.month - 1 || 0);
+			return dateB - dateA; // Descending order
+		});
+	
+        // Initialize the TimelineJS instance
+        window.timeline = new TL.Timeline('timeline-embed', timelineData, {
+			start_at_slide: 0 // Ensure it starts at the first (newest) event
+		});
+		
+		// Adjust the height dynamically
+		const timelineEmbed = document.getElementById('timeline-embed');
+		
+		window.addEventListener('resize', () => {
+            const viewportHeight = window.innerHeight;
+            timelineEmbed.style.height = viewportHeight * 0.6 + 'px';
+        });
+		
     </script>
 </body>
 </html>
