--- a/index.html
+++ b/index.html
@@ -114,63 +114,30 @@
 		}
 
         #timeline-embed {
-            width: 100%;
-            height: 500px;
-            margin: 0 auto;
-        }
-		
-		.timeline-container {
-		  max-width: 800px;
-		  margin: 0 auto;
-		  position: relative;
-		  padding: 20px;
-		  border-left: 4px solid #0056b3;
+			height: 600px; /* Fixed height for proper rendering */
+			width: 100%;
 		}
 
-		.timeline-item {
-		  padding: 10px 20px;
-		  position: relative;
-		  margin-bottom: 20px;
+		/* Make media display below the headline */
+		.tl-media img {
+			display: block;
+			margin: 10px auto; /* Center the image */
+			width: 100%; /* Use full width */
+			max-width: 800px; /* Optional: Limit maximum width for larger screens */
+			height: auto; /* Maintain aspect ratio */
 		}
 
-		.timeline-item h3 {
-		  margin: 0;
-		  font-size: 1.2rem;
-		  color: #0056b3;
+		.tl-media .media-credit, .tl-media .media-caption {
+			text-align: center; /* Center-align the caption and credit */
+			font-size: 0.9rem;
+			color: #666;
+			margin-top: 5px;
 		}
 
-		.timeline-item p {
-		  margin: 5px 0 0;
-		  color: #666;
-		  font-size: 0.9rem;
-		}
-
-		.timeline-item::before {
-		  content: '';
-		  position: absolute;
-		  left: -10px;
-		  top: 10px;
-		  width: 16px;
-		  height: 16px;
-		  background: #0056b3;
-		  border-radius: 50%;
-		  border: 2px solid #fff;
-		}
-
-		/* Animations */
-		@keyframes fadeIn {
-		  from {
-			opacity: 0;
-			transform: translateY(20px);
-		  }
-		  to {
-			opacity: 1;
-			transform: translateY(0);
-		  }
-		}
-
-		.timeline-item {
-		  animation: fadeIn 0.5s ease-in-out;
+		.tl-headline {
+			margin-bottom: 15px; /* Add space between headline and media */
+			font-size: 1.5rem; /* Customize headline size */
+			font-weight: bold;
 		}
     </style>
 </head>
@@ -311,25 +278,5 @@
 		window.dispatchEvent(new Event('resize'));
 
     </script>
-	<style>
-	.tl-media img {
-		display: block;
-		margin: 10px auto; /* Center the image */
-		width: 100%; /* Use full width */
-		max-width: 800px; /* Optional: Limit maximum width for larger screens */
-		height: auto; /* Maintain aspect ratio */
-	}
-
-	.tl-media .media-credit, .tl-media .media-caption {
-		text-align: center; /* Center-align the caption and credit */
-		font-size: 0.9rem;
-		color: #666;
-		margin-top: 5px;
-	}
-
-	.tl-headline {
-		margin-bottom: 15px; /* Add space between headline and media */
-	}
-	</style>
 </body>
 </html>
